overflow solved

--- a/herosection.css.css
+++ b/herosection.css.css
@@ -110,7 +110,7 @@ nav {
     /* display: none; */
     color: black;
     font-size: 5vh;
-    height: 100vh;
+    height: 100%;
     width: 97vw;
     position: absolute;
     top: -55vh;
